--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -15,9 +15,292 @@ Screens:
       - TextCanvas5:
           Control: Text@0.0.43
           Properties:
-            Height: =117
+            Height: =55
             Size: =30
             Text: ="Nombre del KR,código del KR,líder, estado del KR,responsable(como bolitas), botones"
-            Width: =743
-            X: =40
-            Y: =40
+            Width: =1303
+            X: =48
+            Y: =187
+      - Rectangle1_7:
+          Control: Rectangle@2.3.0
+          Properties:
+            BorderColor: =App.Theme.Colors.Darker40
+            Fill: =RGBA(0, 153, 204, 1)
+            HoverFill: =ColorValue("#0099CC")
+            Width: =1366
+      - Image3_7:
+          Control: Image@2.2.3
+          Properties:
+            BorderColor: =App.Theme.Colors.Darker40
+            Height: =70
+            Image: ='Logo-pacifico-blanco'
+            Width: =304
+            X: =125
+            Y: =15
+      - Gallery4:
+          Control: Gallery@2.15.0
+          Variant: BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0
+          Properties:
+            BorderColor: =App.Theme.Colors.Darker40
+            Height: =437
+            Items: |+
+              =Filter(
+                  T_OKR_APP_GCI_003,
+                  If(!IsBlank(filterBuscarKR_1.Value),StartsWith(nombreKR,filterBuscarKR_1.Value),true),
+                  If(!IsBlank(filterEstado_1.Selected.Value) && filterEstado_1.Selected.Value <> "todos",
+                      ID in ForAll(
+                              Filter(
+                                  T_REG_STS_KR_APP_GCI_003,
+                                  nombreEstado = filterEstado_1.Selected.Value && status.Value = "activo"
+                              ),
+                              nombreKRAsociado.Id
+                          ), true
+                  ),
+                  If(!IsBlank(filterLider_1.Selected.Value),
+                      usuarioAprobador.DisplayName = filterLider_1.Selected.Value, true
+                  ),
+                  If(!IsBlank(filterTrimestre_1.Selected.Value),Q.Value = filterTrimestre_1.Selected.Value,true),
+                  If(!IsBlank(filterAnio_1.Selected.Value),Year(fechaProgramadainicio) = filterAnio_1.Selected.Value,true)
+              )
+
+            TemplateSize: =90
+            Width: =1245
+            X: =59
+            Y: =283
+          Children:
+            - NextArrow1:
+                Control: Classic/Icon@2.5.0
+                Properties:
+                  AccessibleLabel: =Self.Tooltip
+                  BorderColor: =RGBA(0, 0, 0, 1)
+                  Color: =RGBA(166, 166, 166, 1)
+                  DisabledBorderColor: =RGBA(56, 56, 56, 1)
+                  DisabledColor: =RGBA(119, 119, 119, 1)
+                  Height: =50
+                  Icon: =Icon.ChevronRight
+                  OnSelect: =Select(Parent)
+                  PaddingBottom: =16
+                  PaddingLeft: =16
+                  PaddingRight: =16
+                  PaddingTop: =16
+                  Tooltip: ="Ver los detalles del elemento"
+                  Width: =50
+                  X: =Parent.TemplateWidth - Self.Width - 12
+                  Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+            - Separator1:
+                Control: Rectangle@2.3.0
+                Properties:
+                  BorderColor: =App.Theme.Colors.Darker40
+                  Fill: =RGBA(255, 255, 255, 1)
+                  Height: =8
+                  OnSelect: =Select(Parent)
+                  Width: =Parent.TemplateWidth
+                  Y: =Parent.TemplateHeight - Self.Height
+            - Rectangle1:
+                Control: Rectangle@2.3.0
+                Properties:
+                  BorderColor: =App.Theme.Colors.Darker40
+                  Fill: =App.Theme.Colors.Darker30
+                  Height: =Parent.TemplateHeight - Separator1.Height
+                  OnSelect: =Select(Parent)
+                  Visible: =ThisItem.IsSelected
+                  Width: =4
+            - TextCanvas7:
+                Control: Text@0.0.43
+                Properties:
+                  Height: =56
+                  Text: =ThisItem.codigoKR
+                  Width: =90
+                  X: =20
+                  Y: =14
+            - TextCanvas7_1:
+                Control: Text@0.0.43
+                Properties:
+                  Height: =56
+                  Text: =ThisItem.nombreKR
+                  Width: =220
+                  X: =110
+                  Y: =14
+            - TextCanvas7_2:
+                Control: Text@0.0.43
+                Properties:
+                  Height: =56
+                  Text: |+
+                    =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
+                  Width: =141
+                  X: =330
+                  Y: =14
+            - estadoKRtext_1:
+                Control: Text@0.0.43
+                Properties:
+                  Align: ='TextCanvas.Align'.Center
+                  BorderRadius: =8
+                  Fill: |-
+                    =Switch(
+                        Lower(estadoKRtext_1.Text),
+                        "sin aprobación", RGBA(255, 0, 0, 1), // Rojo
+                        "programado", RGBA(255, 165, 0, 1),   // Naranja
+                        "en curso", RGBA(54, 176, 75, 1),     // Verde
+                        "finalizado", RGBA(0, 0, 255, 1),     // Azul
+                        RGBA(0, 0, 0, 0)                      // Color por defecto (Negro)
+                    )
+                  Font: =Font.Arial
+                  FontColor: =RGBA(255, 255, 255, 1)
+                  Height: =22
+                  Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
+                  Weight: ='TextCanvas.Weight'.Semibold
+                  Width: =140
+                  X: =471
+                  Y: =31
+            - Gallery6_1:
+                Control: Gallery@2.15.0
+                Variant: Horizontal
+                Properties:
+                  BorderColor: =App.Theme.Colors.Darker40
+                  Height: =50
+                  Items: =ThisItem.'Creado por'
+                  TemplatePadding: =0
+                  TemplateSize: =61
+                  Width: =69
+                  X: =644
+                  Y: =20
+                Children:
+                  - Container2_1:
+                      Control: GroupContainer@1.3.0
+                      Variant: ManualLayout
+                      Properties:
+                        BorderColor: =RGBA(52, 152, 47, 1)
+                        DropShadow: =DropShadow.None
+                        Fill: =RGBA(62, 128, 149, 1)
+                        Height: =42
+                        RadiusBottomLeft: =30
+                        RadiusBottomRight: =30
+                        RadiusTopLeft: =30
+                        RadiusTopRight: =30
+                        Width: =42
+                      Children:
+                        - TextCanvas6_1:
+                            Control: Text@0.0.43
+                            Properties:
+                              Align: ='TextCanvas.Align'.Center
+                              Font: =Font.Arial
+                              FontColor: =RGBA(255, 255, 255, 1)
+                              Height: =30
+                              Text: =Left(First(Split(ThisItem.DisplayName, " ")).Value,1) & Left(Last(FirstN(Split(ThisItem.DisplayName, " "), CountRows(Split(ThisItem.DisplayName, " ")) - 1)).Value,1)
+                              VerticalAlign: ='TextCanvas.VerticalAlign'.Middle
+                              Weight: ='TextCanvas.Weight'.Bold
+                              Width: =30
+                              X: =5
+                              Y: =6
+                  - Image1_1:
+                      Control: Image@2.2.3
+                      Properties:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Height: =50
+                        Image: |
+                          =IfError(
+                              UsuariosdeOffice365.UserPhotoMetadata(ThisItem.Email).HasPhoto,
+                              false,
+                              UsuariosdeOffice365.UserPhotoV2(ThisItem.Email)
+                          )
+                        OnSelect: =Select(Parent)
+                        RadiusBottomLeft: =40
+                        RadiusBottomRight: =40
+                        RadiusTopLeft: =40
+                        RadiusTopRight: =40
+                        Width: =50
+      - filterLider_1:
+          Control: ComboBox@0.0.48
+          Properties:
+            DefaultSelectedItems: |-
+              =If(
+                  User().FullName in Distinct(T_OKR_APP_GCI_003,usuarioAprobador.DisplayName),
+                  [User().FullName]
+              )
+            Height: =35
+            InputTextPlaceholder: ="Seleccionar Lider"
+            Items: =Distinct(T_OKR_APP_GCI_003,usuarioAprobador.DisplayName)
+            TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
+            Width: =228
+            X: =503
+            Y: =127
+          Children:
+            - Value2_4:
+                Control: ComboBoxDataField@1.5.0
+                Variant: textualColumn
+                Properties:
+                  FieldDisplayName: ="Value"
+                  FieldName: ="Value"
+                  FieldType: ="s"
+                  Order: =1
+      - filterBuscarKR_1:
+          Control: TextInput@0.0.49
+          Properties:
+            Height: =35
+            Placeholder: ="Buscar por nombre KR"
+            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Delayed
+            Type: ='TextInputCanvas.Type'.Text
+            Width: =242
+            X: =59
+            Y: =127
+      - filterEstado_1:
+          Control: ComboBox@0.0.48
+          Properties:
+            DefaultSelectedItems: |
+              =
+            Height: =35
+            InputTextPlaceholder: ="Estado"
+            Items: =["sin aprobación","programado","en curso","finalizado"]
+            TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
+            Width: =178
+            X: =313
+            Y: =127
+          Children:
+            - Value2_5:
+                Control: ComboBoxDataField@1.5.0
+                Variant: textualColumn
+                Properties:
+                  FieldDisplayName: ="Value"
+                  FieldName: ="Value"
+                  FieldType: ="s"
+                  Order: =1
+      - filterTrimestre_1:
+          Control: ComboBox@0.0.48
+          Properties:
+            Height: =35
+            InputTextPlaceholder: ="Trimestre"
+            Items: =["Q1","Q2","Q3","Q4"]
+            TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
+            Width: =110
+            X: =743
+            Y: =127
+          Children:
+            - Value2_6:
+                Control: ComboBoxDataField@1.5.0
+                Variant: textualColumn
+                Properties:
+                  FieldDisplayName: ="Value"
+                  FieldName: ="Value"
+                  FieldType: ="s"
+                  Order: =1
+      - filterAnio_1:
+          Control: ComboBox@0.0.48
+          Properties:
+            DefaultSelectedItems: |
+              =
+            Height: =35
+            InputTextPlaceholder: ="Año"
+            Items: =Distinct(Filter(T_OKR_APP_GCI_003,!IsBlank(fechaProgramadainicio)),Year(fechaProgramadainicio))
+            TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
+            Width: =110
+            X: =866
+            Y: =127
+          Children:
+            - Value2_7:
+                Control: ComboBoxDataField@1.5.0
+                Variant: textualColumn
+                Properties:
+                  FieldDisplayName: ="Value"
+                  FieldName: ="Value"
+                  FieldType: ="s"
+                  Order: =1
